Dodan about prozor, kreirana animacija unutar prozora.

--- a/res/Translation.properties
+++ b/res/Translation.properties
@@ -23,3 +23,5 @@ uzam=Employee performance for the month
 uu=Enter username 
 ik=Delete user
 dnk=Add new user
+autor=Author Haris Kukuruzovi?
+vrs=Version 1.0
