Dodane ikonia za prozore, dodani prevodi alertova i promijenjen način gledanja prijavljavinja korisnika na posao.

--- a/res/Translation.properties
+++ b/res/Translation.properties
@@ -23,6 +23,20 @@ uzam=Employee performance for the month
 uu=Enter username 
 ik=Delete user
 dnk=Add new user
-autor=Author Haris Kukuruzovi?
+autor=Author Haris Kukuruzovi\u0107
 vrs=Version 1.0
 report=Report
+Upozorenje=Warning
+Error=Error
+gpa=Authentication error!
+np=Incorrect data!
+duga=Warning about the type of work or you have not completed the previous session
+duga2=You must select a work type or end a previous session!
+uos=Hourly Warning
+preduga=You have checked out before the end of working hours, your schedule will be recorded!
+rad2=You must log in to work in order to log out!
+uovr=Warning about the type of work
+movr=You have to choose the type of work!
+uonk=New user alert
+usera=Username is not unique!
+ssn=Passwords do not match!
